--- a/index.html
+++ b/index.html
@@ -24,40 +24,39 @@
 		  </header>
 		 
 		  <div class="main-content">
-		  	<h1 class="name">Austin Davis</h1>
-		  	<img src="img/me.jpg" alt="Me" class="me">
-		  	<div  class="about">
-			  	<h2 class="exp">Personal Statement</h2>
-			  	<h3>Why this field?</h3>
+		  	<div  class="pstyle">
+			  	<h2 class="statement">Personal Statement</h2>
 			  	<p>
-			  		Design is all around us, but without a trained eye, you may miss some of the most facinating aspects that wouldn't be considered without prior education. In this field we can begin to understand how the world works visually.
+			  		I am an aspiring graphic designer and 3D modeling artist, in search of a passionate, creative and fun environment that will allow me to push the limits of my creativity and gain valuable experience to refine the skills I already possess.
 			  	</p>
 		  	</div>
-		  	<div  class="about">
+		  	<div  class="pstyle">
 			  	<h2 class="education">Education</h2>
-			  	<p>
+			  	<h3>
 			  		Eastern Washington University
-			  	</p>
+			  	</h3>
 			  	<p>
+			  		
+			  	</p>
+			  	<h3>
 			  		South Puget Sound Community College
-			  	</p>
+			  	</h3>
 		  	</div>
 
-		  	<div  class="experience">
+		  	<div  class="pstyle">
 			  	<h2 class="exp">Experience</h2>
-			  	<h3>Why this field?</h3>
+			  	<h3>
+			  		Computer Lab Consultant, EWU
+			  	</h3>
 			  	<p>
-			  		Design is all around us, but without a trained eye, you may miss some of the most facinating aspects that wouldn't be considered without prior education. In this field we can begin to understand how the world works visually.
+			  		I am a current employee at Eastern Washington University, working in the University library as a Multi Medi Lab consultant. This job entails that I know everything there is about the Adobe suite and if I don’t know something, I will soon. This job also requires clear communication with clients to aid them with the tools provided, whether they have prior knowledge of the programs, or not. Being a lab consultant has also given me valuable communication skills that are extremely beneficial when working on projects with multiple members.
 			  	</p>
-		  	</div>
-		  	<div  class="major">
-			  	<h2 class="vcd">Visual Communication and Design</h2>
-			  	<h3>Why this field?</h3>
+			  	<h3>
+			  		Capitol City Press Large Format and Bindry Assistant
+			  	</h3>
 			  	<p>
-			  		Design is all around us, but without a trained eye, you may miss some of the most facinating aspects that wouldn't be considered without prior education. In this field we can begin to understand how the world works visually.
-			  	</p>
+			  		While working at Capitol City Press I gained valuable knowledge about post production in the printing process and information about large format printing including; materials, inks, lamination, cutting, finishing and banner creation.
 		  	</div>
-
 		  	<footer class="main-footer">
 		  		<p> Follow me on:</p>
 			  	<div class="social-media">
