Final Resume Layout

--- a/index.html
+++ b/index.html
@@ -36,11 +36,15 @@
 			  		Eastern Washington University
 			  	</h3>
 			  	<p>
-			  		
+			  		B.A. in Visual Communication and Design <br> Expected Graduation: 2012 - 2015
 			  	</p>
 			  	<h3>
 			  		South Puget Sound Community College
 			  	</h3>
+			  	<p>
+			  		Running Start <br>
+			  		Attended: 2010 - 2012
+			  	</p>
 		  	</div>
 
 		  	<div  class="pstyle">
