--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<head>
 	  <meta charset="UTF-8" />
 	  <title>Austin Davis</title>
+	  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 	  <link rel="stylesheet" href="css/normalize.css">
 	  <link rel="stylesheet" href="css/grid.css">				
 	  <link rel="stylesheet" href="css/styles.css">	
@@ -14,6 +15,12 @@
 	<body>
 		<div class="container">
 		  <header class="main-header">
+		  	<a href="index.html" alt="Home">
+		  		<img src="img/logo.png" alt="My Logo Pre" class="logo">
+		  	</a>
+		  	<a href="index.html" alt="Home">
+		  		<img src="img/logohover.png" alt="My Logo Post" class="logohover">
+		  	</a>
 		    <nav>
 		      <ul>
 		        <li><a href="index.html">Home</a></li>
