--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
 			  	<p>
 			  		While working at Capitol City Press I gained valuable knowledge about post production in the printing process and information about large format printing including; materials, inks, lamination, cutting, finishing and banner creation.
 		  	</div>
+		  	<div  class="pstyle">
+			  	<h2 class="exp">Contact Me</h2>
+			  	<p>
+			  		Email: Austin.DavisDesigns@Gmail.com <br>
+			  		Phone: (360) 701 6414
+			  	</p>
+			 </div>
 		  	<footer class="main-footer">
 		  		<p> Follow me on:</p>
 			  	<div class="social-media">
